Acondicionamiento de proyecto

--- a/Proyecto_analisis_de_video_juegos.ipynb
+++ b/Proyecto_analisis_de_video_juegos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 99,
    "metadata": {
     "tags": [
      "e5c1f0c2-db9f-43a0-99b9-4875c52427e8"
@@ -15,7 +15,9 @@
     "import numpy as np \n",
     "from scipy import stats as st\n",
     "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "from scipy.stats import levene\n",
+    "from scipy.stats import ttest_ind\n"
    ]
   },
   {
@@ -2156,7 +2158,7 @@
    "source": [
     "Se crea un perfil de usuario para cada región\n",
     "\n",
-    "Para cada región (NA, UE, JP) se determinara: las cinco plataformas principales, \n",
+    "Para cada región (NA, UE, JP) se determinara: las cinco plataformas principales, los cinco generos principales y Si las clasificaciones de ESRB afectan las ventas \n",
     "\n",
     "\n"
    ]
@@ -2170,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "trusted": true
    },
@@ -2184,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "trusted": true
    },
@@ -2201,7 +2203,7 @@
        "Name: na_sales, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,11 +2272,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Describe las variaciones en sus cuotas de mercado de una región a otra: \n",
+    "Descripcion de las variaciones en sus cuotas de mercado de una región a otra: \n",
     "\n",
     "En las ventas de NA se observa que Xbox tiene una ligera ventaja sobre PS2, pero se puede entender que son los mas grandes competidores en el mercado, dejando atras Al wii, ps3 y DS, \n",
     "\n",
-    "Por otra parte en las ventas de EU se puede obsevar que el PS2 y el PS3 son las plataformas preferidas por el publicas sin embargo Xbos sigue estando atras de estos dos denjando al wii y PS  al final, aqui no tenemos la presencia del DS como en NA, \n",
+    "Por otra parte en las ventas de EU se puede obsevar que el PS2 y el PS3 son las plataformas preferidas por el publico sin embargo Xbox sigue estando atras de estos dos denjando al wii y PS  al final, aqui no tenemos la presencia del DS como en NA, \n",
     "\n",
     "Y por ultimo en JP podemos observar que las plataformas como DS, PS y PS2 son las mas predominantes en el mercado, tambien vemos la presencia de SNES Y 3DS en el mercado dejando fuera del mercado a Xbox entre los 5 mas vendidos. \n",
     "\n",
@@ -2717,21 +2719,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En cada region se puede observar que el rating E es la que mas se vende, esto se puede atribuir a que la E es indicativo de everybody= para todos, por lo tanto se abre a todo el publico, de ahi en adelante las letras de rating van disminuyendo conforme el rango de edad sube de everybody a teenager hasta mature, por lo cual se ve una reduccion en las ventas, pero fuera de eso, como previamente mencionado, las diferencias entre la cantidad de ventas varia probablemente por la poblacion, sin embargo los tres mercados siguen la misma tendencia. "
+    "En cada region se puede observar que el rating E es la que mas se vende, esto se puede atribuir a que la E es indicativo de everybody= para todos, por lo tanto se abre a todo el publico, de ahi en adelante las letras de rating cambiando conforme el rango de edad sube de everybody a teenager hasta mature, por lo cual se ve una reduccion en las ventas, pero fuera de eso, como previamente mencionado, las diferencias entre la cantidad de ventas varia probablemente por la poblacion, sin embargo los tres mercados siguen la misma tendencia. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Paso 5. Prueba las siguientes hipótesis:\n",
+    "Prueba de hipótesis:\n",
     "\n",
     "H0: Las calificaciones promedio de los usuarios para las plataformas Xbox One y PC son las mismas.\n",
     "\n",
     "HA:  Las calificaciones promedio de los usuarios para las plataformas Xbox One y PC son diferentes.\n",
     "\n",
     "\n",
-    "Establece tu mismo el valor de umbral alfa: 0.05\n",
+    "valor de umbral alfa: 0.05\n",
     "\n"
    ]
   },
@@ -2906,15 +2908,10 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Redondear hacia arriba los valores de 'user_score'\n",
     "df_games['user_score'] = np.ceil(df_games['user_score'])\n",
     "\n",
-    "# Eliminar los NaN antes de convertir a enteros\n",
     "df_games['user_score'] = df_games['user_score'].dropna().astype(int)\n",
     "\n",
-    "# Filtrar por plataformas y calcular la media\n",
     "xbox_one = df_games[df_games['platform'] == 'XOne']['user_score'].dropna().mean()\n",
     "PC = df_games[df_games['platform'] == 'PC']['user_score'].dropna().mean()\n",
     "\n",
@@ -2955,18 +2952,6 @@
    ],
    "source": [
     "df_games['user_score'].dropna().astype(int)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor:</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Excelente! Con este análisis por región ayuda a complementar el análisis general anterior y a hacer zoom a los resultados por cada una de las regiones.   \n",
-    "\n",
-    "</div>"
    ]
   },
   {
@@ -3023,8 +3008,6 @@
     }
    ],
    "source": [
-    "from scipy.stats import levene\n",
-    "\n",
     "# Extraer las muestras de user_score para ambas plataformas\n",
     "xbox_one_scores = df_games[df_games['platform'] == 'XOne']['user_score'].dropna()\n",
     "pc_scores = df_games[df_games['platform'] == 'PC']['user_score'].dropna()\n",
@@ -3061,7 +3044,6 @@
     }
    ],
    "source": [
-    "from scipy.stats import ttest_ind\n",
     "\n",
     "# Verificar si las muestras tienen suficiente tamaño y varianza\n",
     "if len(xbox_one_scores) < 2 or len(pc_scores) < 2:\n",
@@ -3084,6 +3066,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Prueba de Hipotesis\n",
+    "\n",
+    "\n",
     "H0: Las calificaciones promedio de los usuarios para los géneros de Acción y Deportes son diferentes.\n",
     "\n",
     "HA: Las calificaciones promedio de los usuarios para los géneros de Acción y Deportes son Iguales.\n"
@@ -3200,15 +3185,13 @@
     "Action = df_games[df_games['genre'] == 'Action']['user_score'].dropna()\n",
     "Sports = df_games[df_games['genre'] == 'Sports']['user_score'].dropna()\n",
     "\n",
-    "from scipy.stats import ttest_ind\n",
     "\n",
-    "# Verificar si las muestras tienen suficiente tamaño y varianza\n",
     "if len(Action) < 2 or len(Sports) < 2:\n",
     "    print(\"No es posible realizar el t-test: una de las muestras tiene menos de 2 datos.\")\n",
     "elif Action.var() == 0 or Sports.var() == 0:\n",
     "    print(\"No es posible realizar el t-test: una de las muestras tiene varianza 0.\")\n",
     "else:\n",
-    "    # Realizar el t-test si las condiciones son válidas\n",
+    "    \n",
     "    t_value, pvalue = ttest_ind(Action, Sports, equal_var=equal_var)\n",
     "\n",
     "    if pvalue <= alpha:\n",
@@ -3223,24 +3206,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor:</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Excelente trabajo con el desarrollo de las pruebas de hipótesis. Además, lo complementaste con la prueba de levene para mostrar el supuesto de varianzas iguales. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Explica:\n",
-    "\n",
-    "— Cómo formulaste las hipótesis nula y alternativa.\n",
-    "\n",
-    "La hipotesis Nula se proporciono para el ejercicio y la alternativa se formulo dandole la contratia a la hipotesis nula \n",
-    "\n",
-    "— Qué criterio utilizaste para probar las hipótesis y por qué.\n",
-    "\n",
     "Al estarse tratando de dos muestras independientes en ambos casos, en el primero siendo Xboxone vs PC y el otro caso siendo Action vs Sports, el ttest resulto ser la mejor opcion en especial porque se buscaba saber si eran iguales o diferentes."
    ]
   },
@@ -3248,27 +3213,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Paso 6. Escribe una conclusión general:\n",
+    "Conclusión general:\n",
     "\n",
-    "Se puede concluir que los juegos de Accion son los que tienen la mayor prominencia en la industria de los video juegos seguidos por los shooters y Sports, es importante considerar que el mercado de JP es leal a sus plataformas sin embargo en EU y NA sigue habiendo competencia entre Xbox y PS2/3, para 2017, el enfoque deberia estar en juegos de accion, shooters y sports sin embargo en JP se le debe dar mayor importancia a los juegos de rol puesto que son los mas vendidos alla en las plataformas como DS Y PS."
+    "Se puede concluir que los juegos de Accion son los que tienen la mayor prominencia en la industria de los video juegos seguidos por los shooters y Sports, es importante considerar que el mercado de JP es leal a sus plataformas sin embargo en EU y NA sigue habiendo competencia entre Xbox y PS2/3, para 2017, el enfoque deberia estar en juegos de accion, shooters y sports sin embargo en JP se le debe dar mayor importancia a los juegos de rol puesto que son los mas vendidos alla en las plataformas como DS Y PS.\n",
+    "\n",
+    "Ademas se observo que las puntuaciones de usuarios y criticos no son una metrica significativa para el exito o fracaso de un video juego, sin embargo el genero del juego si nos da un  mejor pronostico del exito de un video juego."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Comentario revisor</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Marco, en general creo que hiciste un muy buen trabajo con el proyecto, pudiste limpiar y trabajar las bases de datos de beuna manera. Además, el análisis explorario de datos fue completo al mostrar resultados relevantes que pueden ser de mucha utilidad para la toma de decisiones y desarrollaste las pruebas de hipótesis de una buena manera. No obstante, recuerda que siempre podemos mejorar y te menciono algunos puntos que debes considerar:\n",
-    "\n",
-    "\n",
-    "*  Considerar eliminar registros atipicos que puedan sesgar nuestros resultados. \n",
-    "    \n",
-    "\n",
-    "    \n",
-    "</div>"
-   ]
+   "source": []
   }
  ],
  "metadata": {
