--- a/Proyecto_analisis_de_video_juegos.ipynb
+++ b/Proyecto_analisis_de_video_juegos.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Descripción del proyecto:\n",
+    "\n",
+    "Trabajas para la tienda online Ice que vende videojuegos por todo el mundo. Las reseñas de usuarios y expertos, los géneros, las plataformas (por ejemplo, Xbox o PlayStation) y los datos históricos sobre las ventas de juegos están disponibles en fuentes abiertas. Tienes que identificar patrones que determinen si un juego tiene éxito o no. Esto te permitirá detectar proyectos prometedores y planificar campañas publicitarias.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {
@@ -1224,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "trusted": true
    },
@@ -1259,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "trusted": true
    },
@@ -1306,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "trusted": true
    },
@@ -1359,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "trusted": true
    },
